--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background-color;
+  backgr */
+  /* background-image: linear-gradient(90deg, rgb(199, 199, 21),rgb(248, 241, 241),rgb(199, 199, 26) */
+  /* ); */
 }
 
 code {
