--- a/src/components/search-form/Search.css
+++ b/src/components/search-form/Search.css
@@ -1,6 +1,26 @@
 .form{
+    
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+.search-form{
+    text-align: center;
+    width:500px;
+    height:100px;
+    border-radius: 5px;
+    margin-top: 10px;
+    box-shadow: 1px 8px 6px rgb(128, 128, 128);
+    background-color: rgb(255, 254, 254);
+}
+input{
+    width:30vw;
+    display:flex;
+    margin: auto;
+    text-align: center;
+}
+label{
+    font-size: 17px;
+    font-weight: 700;
+    font-family: 'Courier New', Courier, monospace;
 }
