--- a/src/components/single-cocktail/Cocktail.css
+++ b/src/components/single-cocktail/Cocktail.css
@@ -1,8 +1,56 @@
 .images{
-    width:250px;
+    width:280px;
     height:250px;
+    border-radius: 50%;
 }
 .cocktail-list{
     display: grid;
+    padding: 20px;
+    
     grid-template-columns: auto auto auto;
+    gap:0.8rem;
+}
+.img-container{
+    background-color: rgb(0, 0, 0);
+    height: 330px;
+    border-radius: 50%;
+    box-shadow: 5px 5px 5px gray;
+    margin: 0;
+    padding: 0;
+}
+.cocktail-footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.name{
+    font-size: 19px;
+    font-family:cursive;
+    color: brown;
+    font-weight: 800;
+}
+.glass{
+    font-size: 12px;
+    font-family:cursive;
+    border-bottom: 1px solid;
+    border-color:rgb(249, 250, 245);;
+    color: rgb(245, 245, 245);
+}
+.info{
+    font-size: 12px;
+    border-bottom: 1px solid;
+    border-color: black;
+    font-family:cursive;
+    color: rgb(17, 3, 3);
+}
+.button{
+    width:8vw;
+    height:3vh;
+    font-size: 12px;
+    background-color: rgb(165, 182, 11);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+
 }
