--- a/src/components/search-form/Search.css
+++ b/src/components/search-form/Search.css
@@ -1,20 +1,21 @@
 .form{
-    
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .search-form{
     text-align: center;
-    width:500px;
-    height:100px;
+    /* width:40vw; */
+    height:75px;
     border-radius: 5px;
     margin-top: 10px;
-    box-shadow: 1px 8px 6px rgb(128, 128, 128);
-    background-color: rgb(255, 254, 254);
+    box-shadow: 1px 7px 50px rgb(26, 25, 25);
+    /* background-color: rgb(255, 254, 254); */
+    background-repeat: no-repeat;
+    background-image: url(https://us.123rf.com/450wm/sarinra/sarinra2010/sarinra201000001/sarinra201000001-abstract-polygon-background-with-vector-illustrations-.jpg?ver=6);
 }
 input{
-    width:30vw;
+    width:20vw;
     display:flex;
     margin: auto;
     text-align: center;
