--- a/src/components/single-cocktail/Cocktail.css
+++ b/src/components/single-cocktail/Cocktail.css
@@ -1,14 +1,14 @@
 .images{
-    width:280px;
+    width:50vw;
     height:250px;
     border-radius: 50%;
 }
 .cocktail-list{
     display: grid;
-    padding: 20px;
-    
+    /* margin-left: 20px; */
+
     grid-template-columns: auto auto auto;
-    gap:0.8rem;
+    gap:0.2rem;
 }
 .img-container{
     background-color: rgb(0, 0, 0);
@@ -52,5 +52,132 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+
+}
+@media screen and (min-width: 462px) and (max-width: 670px) {
+    .cocktail-list{
+        display: grid;
+        grid-template-columns: auto ;
+    }
+    .images{
+        border-radius: 5% 5% 0% 0%;
+    }
+    .img-container{
+        height: 350px;
+        width:50vw;
+        margin: auto;
+        margin-top: 15px;
+        border-radius: 5%;
+    }
+    .button{
+        width:12vw;
+    font-size: 18px;
+    }
+    .name{
+        font-size: 25px;
+    }
+    .glass{
+        font-size: 18px;
+        margin-top: -15px;
+    }
+
+}
+
+
+@media screen and (min-width: 671px) and (max-width: 800px) {
+    .cocktail-list{
+        display: grid;
+        margin-left: 5px;
+        grid-template-columns: auto auto ;
+        margin-bottom: 10px;
+    }
+    .images{
+        width:45vw;
+        border-radius: 5% 5% 0% 0%;
+    }
+    .img-container{
+        height: 350px;
+        width:45vw;
+        margin: auto;
+        margin-top: 15px;
+        border-radius: 5%;
+    }
+    .button{
+        width:12vw;
+    font-size: 18px;
+    }
+    .name{
+        font-size: 25px;
+    }
+    .glass{
+        font-size: 18px;
+        margin-top: -15px;
+    }
+
+}
+
+@media screen and (min-width: 801px) and (max-width: 900px) {
+    .cocktail-list{
+        display: grid;
+        margin-left: 5px;
+        grid-template-columns: auto auto ;
+        margin-bottom: 10px;
+    }
+    .images{
+        width:45vw;
+        border-radius: 5% 5% 0% 0%;
+    }
+    .img-container{
+        height: 350px;
+        width:45vw;
+        margin: auto;
+        margin-top: 15px;
+        border-radius: 5%;
+    }
+    .button{
+        width:12vw;
+    font-size: 18px;
+    }
+    .name{
+        font-size: 25px;
+    }
+    .glass{
+        font-size: 18px;
+        margin-top: -15px;
+    }
+
+}
+
+@media screen and (min-width: 901px){
+    .cocktail-list{
+        display: grid;
+        margin:auto;
+        grid-template-columns: auto auto auto;
+        margin-bottom: 10px;
+    }
+    .images{
+        width:20vw;
+        height:32vh;
+        border-radius: 50%;
+        /* border-radius: 5% 5% 0% 0%; */
+    }
+    .img-container{
+        height: 350px;
+        width:20vw;
+        margin: auto;
+        margin-top: 15px;
+        border-radius: 50%;
+    }
+    .button{
+        width:8vw;
+    font-size: 15px;
+    }
+    .name{
+        font-size: 25px;
+    }
+    .glass{
+        font-size: 18px;
+        margin-top: -15px;
+    }
 
 }
