--- a/src/components/single-cocktail/Cocktail.css
+++ b/src/components/single-cocktail/Cocktail.css
@@ -181,3 +181,32 @@
     }
 
 }
+
+@media screen and (max-width: 462px) {
+    .cocktail-list{
+        display: grid;
+        grid-template-columns: auto ;
+    }
+    .images{
+        border-radius: 5% 5% 0% 0%;
+    }
+    .img-container{
+        height: 350px;
+        width:50vw;
+        margin: auto;
+        margin-top: 15px;
+        border-radius: 5%;
+    }
+    .button{
+        width:12vw;
+    font-size: 18px;
+    }
+    .name{
+        font-size: 25px;
+    }
+    .glass{
+        font-size: 18px;
+        margin-top: -15px;
+    }
+
+}
