--- a/src/components/single-cocktail/Cocktail.css
+++ b/src/components/single-cocktail/Cocktail.css
@@ -87,24 +87,27 @@
 @media screen and (min-width: 671px) and (max-width: 800px) {
     .cocktail-list{
         display: grid;
-        margin-left: 5px;
+        margin: auto;
+        /* margin-left: 5px; */
         grid-template-columns: auto auto ;
         margin-bottom: 10px;
     }
     .images{
-        width:45vw;
+        width:35vw;
+        height:35vh;
         border-radius: 5% 5% 0% 0%;
     }
     .img-container{
-        height: 350px;
-        width:45vw;
+        height: 330px;
+        width:35vw;
         margin: auto;
         margin-top: 15px;
         border-radius: 5%;
     }
     .button{
-        width:12vw;
-    font-size: 18px;
+        width:16vw;
+        height:3.5vh;
+    font-size: 15px;
     }
     .name{
         font-size: 25px;
@@ -156,14 +159,14 @@
         margin-bottom: 10px;
     }
     .images{
-        width:20vw;
+        width:25vw;
         height:32vh;
         border-radius: 50%;
         /* border-radius: 5% 5% 0% 0%; */
     }
     .img-container{
         height: 350px;
-        width:20vw;
+        width:25vw;
         margin: auto;
         margin-top: 15px;
         border-radius: 50%;
@@ -189,17 +192,18 @@
     }
     .images{
         border-radius: 5% 5% 0% 0%;
+        height:35vh;
     }
     .img-container{
-        height: 350px;
+        height: 320px;
         width:50vw;
         margin: auto;
         margin-top: 15px;
         border-radius: 5%;
     }
     .button{
-        width:12vw;
-    font-size: 18px;
+        width:18vw;
+    font-size: 15px;
     }
     .name{
         font-size: 25px;
