--- a/src/components/single-cocktail/Cocktail.css
+++ b/src/components/single-cocktail/Cocktail.css
@@ -60,18 +60,19 @@
         grid-template-columns: auto ;
     }
     .images{
+        height:30vh;
         border-radius: 5% 5% 0% 0%;
     }
     .img-container{
-        height: 350px;
+        height: 300px;
         width:50vw;
         margin: auto;
         margin-top: 15px;
         border-radius: 5%;
     }
     .button{
-        width:12vw;
-    font-size: 18px;
+        width:17vw;
+    font-size: 15px;
     }
     .name{
         font-size: 25px;
@@ -93,13 +94,13 @@
         margin-bottom: 10px;
     }
     .images{
-        width:35vw;
-        height:35vh;
+        width:30vw;
+        height:25vh;
         border-radius: 5% 5% 0% 0%;
     }
     .img-container{
-        height: 330px;
-        width:35vw;
+        height: 280px;
+        width:30vw;
         margin: auto;
         margin-top: 15px;
         border-radius: 5%;
@@ -122,24 +123,25 @@
 @media screen and (min-width: 801px) and (max-width: 900px) {
     .cocktail-list{
         display: grid;
-        margin-left: 5px;
+        margin:auto;
         grid-template-columns: auto auto ;
         margin-bottom: 10px;
     }
     .images{
-        width:45vw;
+        width:30vw;
+        height:40vh;
         border-radius: 5% 5% 0% 0%;
     }
     .img-container{
         height: 350px;
-        width:45vw;
+        width:30vw;
         margin: auto;
         margin-top: 15px;
         border-radius: 5%;
     }
     .button{
-        width:12vw;
-    font-size: 18px;
+        width:16vw;
+    font-size: 15px;
     }
     .name{
         font-size: 25px;
@@ -156,18 +158,18 @@
         display: grid;
         margin:auto;
         row-gap: 4rem;
-        grid-template-columns: auto auto;
+        grid-template-columns: auto auto auto;
         margin-bottom: 10px;
     }
     .images{
-        width:45vw;
+        width:27vw;
         height:30vh;
         /* border-radius: 50%; */
         border-radius: 5% 5% 0% 0%;
     }
     .img-container{
-        height: 700px;
-        width:45vw;
+        height: 280px;
+        width:27vw;
         margin: auto;
         margin-top: 15px;
         border-radius: 5%;
@@ -191,18 +193,18 @@
         display: grid;
         margin:auto;
         row-gap: 4rem;
-        grid-template-columns: auto auto;
+        grid-template-columns: auto auto auto;
         margin-bottom: 10px;
     }
     .images{
-        width:45vw;
+        width:28vw;
         height:30vh;
         /* border-radius: 50%; */
         border-radius: 5% 5% 0% 0%;
     }
     .img-container{
-        height: 700px;
-        width:45vw;
+        height: 270px;
+        width:28vw;
         margin: auto;
         margin-top: 15px;
         border-radius: 5%;
@@ -226,18 +228,18 @@
         display: grid;
         margin:auto;
         row-gap: 4rem;
-        grid-template-columns: auto auto;
+        grid-template-columns: auto auto auto;
         margin-bottom: 10px;
     }
     .images{
-        width:45vw;
-        height:30vh;
+        width:30vw;
+        height:25vh;
         /* border-radius: 50%; */
         border-radius: 5% 5% 0% 0%;
     }
     .img-container{
-        height: 700px;
-        width:45vw;
+        height: 460px;
+        width:30vw;
         margin: auto;
         margin-top: 15px;
         border-radius: 5%;
@@ -261,18 +263,18 @@
         display: grid;
         margin:auto;
         row-gap: 4rem;
-        grid-template-columns: auto auto;
+        grid-template-columns: auto auto auto;
         margin-bottom: 10px;
     }
     .images{
-        width:45vw;
-        height:30vh;
+        width:25vw;
+        height:38vh;
         /* border-radius: 50%; */
         border-radius: 5% 5% 0% 0%;
     }
     .img-container{
-        height: 700px;
-        width:45vw;
+        height: 360px;
+        width:25vw;
         margin: auto;
         margin-top: 15px;
         border-radius: 5%;
@@ -291,7 +293,41 @@
 
 }
 
-@media screen and (min-width: 1440px) and (max-width: 2522px){
+@media screen and (min-width: 1440px) and (max-width: 1951px){
+    .cocktail-list{
+        display: grid;
+        margin:auto;
+        row-gap: 4rem;
+        grid-template-columns: auto auto auto;
+        margin-bottom: 10px;
+    }
+    .images{
+        width:25vw;
+        height:26vh;
+        border-radius: 5% 5% 0% 0%;
+    }
+    .img-container{
+        height: 440px;
+        width:25vw;
+        margin: auto;
+        margin-top: 15px;
+        border-radius: 5%;
+    }
+    .button{
+        width:8vw;
+    font-size: 15px;
+    }
+    .name{
+        font-size: 25px;
+    }
+    .glass{
+        font-size: 18px;
+        margin-top: -15px;
+    }
+
+}
+
+@media screen and (min-width: 1952px) and (max-width: 2086px){
     .cocktail-list{
         display: grid;
         margin:auto;
@@ -301,11 +337,11 @@
     }
     .images{
         width:20vw;
-        height:28vh;
+        height:26vh;
         border-radius: 5% 5% 0% 0%;
     }
     .img-container{
-        height: 650px;
+        height: 440px;
         width:20vw;
         margin: auto;
         margin-top: 15px;
@@ -325,7 +361,7 @@
 
 }
 
-@media screen and (min-width: 2523px){
+@media screen and (min-width: 2087px){
     .cocktail-list{
         display: grid;
         row-gap: 5rem;
@@ -341,7 +377,7 @@
     }
     .img-container{
         background-color: black;
-        height: 650px;
+        height: 500px;
         width:20vw;
         margin: auto;
         border-radius: 5%;
@@ -363,16 +399,18 @@
 @media screen and (max-width: 462px) {
     .cocktail-list{
         display: grid;
+        margin: auto;
+        row-gap: 2rem;
         grid-template-columns: auto ;
     }
     .images{
+        width:60vw;
         border-radius: 5% 5% 0% 0%;
-        height:35vh;
+        height:25vh;
     }
     .img-container{
-        height: 320px;
-        width:50vw;
-        margin: auto;
+        height: 270px;
+        width:60vw;
         margin-top: 15px;
         border-radius: 5%;
     }
